test/integration/bad/tuples/bad_unpack_duplicates.stan
transformed data {
  int x = 3;
  int y = 4;

  (x, y, x, y) = (y, x, y, x);
}
